--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,16 +5,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@color/yellow"
-    >
+    android:background="@color/white"
 
+    >
+<TextView
+    android:id="@+id/tv1"
+    android:layout_width="150dp"
+    android:layout_height="20dp"
+    app:layout_constraintEnd_toEndOf="@+id/tv_title"
+    app:layout_constraintStart_toStartOf="@+id/tv_title"
+    app:layout_constraintBottom_toTopOf="@+id/tv_title"
+    android:layout_marginBottom="80dp"
+    android:text="@string/title"
+    android:textSize="18sp"
+    android:textColor="@color/black"
+    android:gravity="center"
+    />
     <TextView
-        android:id="@+id/tv1"
+        android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/input_request"
         android:textColor="@color/black"
-
+        android:gravity="center"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,32 +35,91 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.204" />
 
+    <TextView
+        android:id="@+id/tv_hint"
+        android:layout_width="100dp"
+        android:layout_height="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/bt1"
+        app:layout_constraintStart_toStartOf="@+id/bt1"
+        app:layout_constraintEnd_toEndOf="@+id/bt1"
+        android:layout_marginTop="15dp"
+        android:text="@string/hint"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintHorizontal_bias="0"
+
+        />
+
+    <TextView
+        android:id="@+id/tv_hint2"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        app:layout_constraintTop_toBottomOf="@id/bt1"
+        app:layout_constraintEnd_toEndOf="@+id/bt1"
+        app:layout_constraintStart_toEndOf="@+id/tv_hint"
+        android:layout_marginTop="15dp"
+        app:layout_constraintHorizontal_bias="1"
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        />
+<TextView
+    android:id="@+id/tv_quantity"
+    android:layout_width="80dp"
+    android:layout_height="25dp"
+    app:layout_constraintStart_toStartOf="@+id/tv_hint"
+    app:layout_constraintEnd_toEndOf="@+id/tv_hint"
+    app:layout_constraintTop_toBottomOf="@+id/tv_hint"
+    app:layout_constraintHorizontal_bias="0"
+    android:layout_marginTop="20dp"
+    android:text="@string/quantity"
+    android:textSize="16sp"
+    android:textColor="@color/black"
+    />
+<TextView
+    android:id="@+id/tv_quantity2"
+    android:layout_width="30dp"
+    android:layout_height="20dp"
+    app:layout_constraintTop_toBottomOf="@+id/tv_hint2"
+    app:layout_constraintEnd_toEndOf="@id/tv_hint2"
+    app:layout_constraintStart_toEndOf="@id/tv_quantity"
+    android:layout_marginTop="20dp"
+    app:layout_constraintHorizontal_bias="1"
+    android:textColor="@color/black"
+    android:textSize="16sp"
+    android:visibility="invisible"
+    />
 
 
 
     <EditText
         android:id="@+id/ed_text"
-        android:layout_width="200dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="140dp"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
         android:background="@color/white"
+
         android:hint="@string/input_numbers"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/tv1"
+        app:layout_constraintEnd_toEndOf="@+id/tv_title"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/tv1"
-        app:layout_constraintTop_toBottomOf="@+id/tv1"
-        android:inputType="number"
-        />
+        app:layout_constraintStart_toStartOf="@+id/tv_title"
+        app:layout_constraintTop_toBottomOf="@+id/tv_title"
+
+        android:backgroundTint="@color/light_gray"
+         />
 
     <Button
         android:id="@+id/bt1"
-        android:layout_width="120dp"
-        android:layout_height="60dp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         app:layout_constraintEnd_toEndOf="@+id/ed_text"
         app:layout_constraintStart_toStartOf="@+id/ed_text"
         app:layout_constraintTop_toBottomOf="@+id/ed_text"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:text="@string/input"
         android:textSize="22sp"
 
