--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,8 @@
     />
     <TextView
         android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
         android:text="@string/input_request"
         android:textColor="@color/black"
         android:gravity="center"
@@ -33,7 +33,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.204" />
+        app:layout_constraintVertical_bias="0.204"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        />
 
     <TextView
         android:id="@+id/tv_hint"
@@ -86,7 +89,7 @@
     app:layout_constraintHorizontal_bias="1"
     android:textColor="@color/black"
     android:textSize="16sp"
-    android:visibility="invisible"
+
     />
 
 
@@ -94,7 +97,7 @@
     <EditText
         android:id="@+id/ed_text"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="48dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
@@ -106,7 +109,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/tv_title"
         app:layout_constraintTop_toBottomOf="@+id/tv_title"
-
+        android:inputType="number"
         android:backgroundTint="@color/light_gray"
          />
 
@@ -114,15 +117,46 @@
         android:id="@+id/bt1"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        app:layout_constraintEnd_toEndOf="@+id/ed_text"
-        app:layout_constraintStart_toStartOf="@+id/ed_text"
-        app:layout_constraintTop_toBottomOf="@+id/ed_text"
-        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="@+id/tv_title"
+        app:layout_constraintStart_toStartOf="@+id/tv_title"
+        app:layout_constraintTop_toBottomOf="@+id/tv_title"
+        android:layout_marginTop="110dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:text="@string/input"
         android:textSize="22sp"
 
-        />
 
+        />
+    <Button
+        android:id="@+id/bt2"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_title"
+        app:layout_constraintStart_toStartOf="@+id/tv_title"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintEnd_toEndOf="@+id/tv_title"
+        android:layout_marginTop="50dp"
+        android:layout_marginStart="60dp"
+        android:text="@string/yes"
+        android:textSize="22sp"
+        android:textColor="@color/white"
+        android:visibility="gone"
+
+        />
+<Button
+    android:id="@+id/bt3"
+    android:layout_width="100dp"
+    android:layout_height="50dp"
+    app:layout_constraintTop_toBottomOf="@id/tv_title"
+    app:layout_constraintEnd_toEndOf="@+id/tv_title"
+    app:layout_constraintStart_toStartOf="@+id/tv_title"
+    android:layout_marginTop="50dp"
+    android:layout_marginEnd="60dp"
+    app:layout_constraintHorizontal_bias="1"
+    android:text="@string/no"
+    android:textSize="22sp"
+    android:textColor="@color/white"
+    android:visibility="gone"
+    />
 </androidx.constraintlayout.widget.ConstraintLayout>
