--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,14 +12,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/group1"
-        app:constraint_referenced_ids="tv_hint, tv_hint2,tv_quantity,tv_quantity2, bt1, ed_text"
+        app:constraint_referenced_ids="tv_hint, hint_field, tv_quantity,
+        attempts_field, button_checking_input, user_input_field"
         />
 
     <androidx.constraintlayout.widget.Group
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/group2"
-        app:constraint_referenced_ids="bt2, bt3"
+        app:constraint_referenced_ids="button_restart_game, button_end_game"
         android:visibility="gone"
         />
 
@@ -57,9 +58,9 @@
         android:id="@+id/tv_hint"
         android:layout_width="100dp"
         android:layout_height="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/bt1"
-        app:layout_constraintStart_toStartOf="@+id/bt1"
-        app:layout_constraintEnd_toEndOf="@+id/bt1"
+        app:layout_constraintTop_toBottomOf="@+id/button_checking_input"
+        app:layout_constraintStart_toStartOf="@+id/button_checking_input"
+        app:layout_constraintEnd_toEndOf="@+id/button_checking_input"
         android:layout_marginTop="15dp"
         android:text="@string/hint"
         android:textColor="@color/black"
@@ -69,11 +70,11 @@
         />
 
     <TextView
-        android:id="@+id/tv_hint2"
+        android:id="@+id/hint_field"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        app:layout_constraintTop_toBottomOf="@id/bt1"
-        app:layout_constraintEnd_toEndOf="@+id/bt1"
+        app:layout_constraintTop_toBottomOf="@id/button_checking_input"
+        app:layout_constraintEnd_toEndOf="@+id/button_checking_input"
         app:layout_constraintStart_toEndOf="@+id/tv_hint"
         android:layout_marginTop="15dp"
         app:layout_constraintHorizontal_bias="1"
@@ -94,11 +95,11 @@
     android:textColor="@color/black"
     />
 <TextView
-    android:id="@+id/tv_quantity2"
+    android:id="@+id/attempts_field"
     android:layout_width="30dp"
     android:layout_height="20dp"
-    app:layout_constraintTop_toBottomOf="@+id/tv_hint2"
-    app:layout_constraintEnd_toEndOf="@id/tv_hint2"
+    app:layout_constraintTop_toBottomOf="@+id/hint_field"
+    app:layout_constraintEnd_toEndOf="@id/hint_field"
     app:layout_constraintStart_toEndOf="@id/tv_quantity"
     android:layout_marginTop="20dp"
     app:layout_constraintHorizontal_bias="1"
@@ -110,7 +111,7 @@
 
 
     <EditText
-        android:id="@+id/ed_text"
+        android:id="@+id/user_input_field"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginTop="50dp"
@@ -129,7 +130,7 @@
          />
 
     <Button
-        android:id="@+id/bt1"
+        android:id="@+id/button_checking_input"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         app:layout_constraintEnd_toEndOf="@+id/tv_title"
@@ -144,7 +145,7 @@
 
         />
     <Button
-        android:id="@+id/bt2"
+        android:id="@+id/button_restart_game"
         android:layout_width="100dp"
         android:layout_height="50dp"
         app:layout_constraintTop_toBottomOf="@+id/tv_title"
@@ -160,7 +161,7 @@
 
         />
 <Button
-    android:id="@+id/bt3"
+    android:id="@+id/button_end_game"
     android:layout_width="100dp"
     android:layout_height="50dp"
     app:layout_constraintTop_toBottomOf="@id/tv_title"
