--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,68 +4,66 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
     android:background="@color/white"
+    tools:context=".MainActivity"
 
     >
+
     <androidx.constraintlayout.widget.Group
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/group1"
-        app:constraint_referenced_ids="tv_hint, hint_field, tv_quantity,
-        attempts_field, button_checking_input, user_input_field"
-        />
-
-    <androidx.constraintlayout.widget.Group
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/group2"
-        app:constraint_referenced_ids="button_restart_game, button_end_game"
-        android:visibility="gone"
-        />
+        app:constraint_referenced_ids="tv_hint, hint_field, tv_quantity,
+        attempts_field, button_checking_input, user_input_field" />
 
-<TextView
-    android:id="@+id/tv1"
-    android:layout_width="150dp"
-    android:layout_height="20dp"
-    app:layout_constraintEnd_toEndOf="@+id/tv_title"
-    app:layout_constraintStart_toStartOf="@+id/tv_title"
-    app:layout_constraintBottom_toTopOf="@+id/tv_title"
-    android:layout_marginBottom="80dp"
-    android:text="@string/title"
-    android:textSize="18sp"
-    android:textColor="@color/black"
-    android:gravity="center"
-    />
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/group2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:constraint_referenced_ids="button_restart_game, button_end_game" />
+
     <TextView
-        android:id="@+id/tv_title"
+        android:id="@+id/tv1"
+        android:layout_width="150dp"
+        android:layout_height="20dp"
+        android:layout_marginBottom="80dp"
+        android:gravity="center"
+        android:text="@string/title"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/title"
+        app:layout_constraintEnd_toEndOf="@+id/title"
+        app:layout_constraintStart_toStartOf="@+id/title" />
+
+    <TextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:gravity="center"
         android:text="@string/input_request"
         android:textColor="@color/black"
-        android:gravity="center"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.204"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        />
+        app:layout_constraintVertical_bias="0.204" />
 
     <TextView
         android:id="@+id/tv_hint"
         android:layout_width="100dp"
         android:layout_height="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/button_checking_input"
-        app:layout_constraintStart_toStartOf="@+id/button_checking_input"
-        app:layout_constraintEnd_toEndOf="@+id/button_checking_input"
         android:layout_marginTop="15dp"
         android:text="@string/hint"
         android:textColor="@color/black"
         android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/button_checking_input"
         app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="@+id/button_checking_input"
+        app:layout_constraintTop_toBottomOf="@+id/button_checking_input"
 
         />
 
@@ -73,106 +71,106 @@
         android:id="@+id/hint_field"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        app:layout_constraintTop_toBottomOf="@id/button_checking_input"
-        app:layout_constraintEnd_toEndOf="@+id/button_checking_input"
-        app:layout_constraintStart_toEndOf="@+id/tv_hint"
         android:layout_marginTop="15dp"
-        app:layout_constraintHorizontal_bias="1"
-        android:textSize="16sp"
         android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/button_checking_input"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintStart_toEndOf="@+id/tv_hint"
+        app:layout_constraintTop_toBottomOf="@id/button_checking_input" />
+
+    <TextView
+        android:id="@+id/tv_quantity"
+        android:layout_width="80dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/quantity"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/tv_hint"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="@+id/tv_hint"
+        app:layout_constraintTop_toBottomOf="@+id/tv_hint" />
+
+    <TextView
+        android:id="@+id/attempts_field"
+        android:layout_width="30dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@id/hint_field"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintStart_toEndOf="@id/tv_quantity"
+        app:layout_constraintTop_toBottomOf="@+id/hint_field"
+
         />
-<TextView
-    android:id="@+id/tv_quantity"
-    android:layout_width="80dp"
-    android:layout_height="25dp"
-    app:layout_constraintStart_toStartOf="@+id/tv_hint"
-    app:layout_constraintEnd_toEndOf="@+id/tv_hint"
-    app:layout_constraintTop_toBottomOf="@+id/tv_hint"
-    app:layout_constraintHorizontal_bias="0"
-    android:layout_marginTop="20dp"
-    android:text="@string/quantity"
-    android:textSize="16sp"
-    android:textColor="@color/black"
-    />
-<TextView
-    android:id="@+id/attempts_field"
-    android:layout_width="30dp"
-    android:layout_height="20dp"
-    app:layout_constraintTop_toBottomOf="@+id/hint_field"
-    app:layout_constraintEnd_toEndOf="@id/hint_field"
-    app:layout_constraintStart_toEndOf="@id/tv_quantity"
-    android:layout_marginTop="20dp"
-    app:layout_constraintHorizontal_bias="1"
-    android:textColor="@color/black"
-    android:textSize="16sp"
-
-    />
-
 
 
     <EditText
         android:id="@+id/user_input_field"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"
         android:background="@color/white"
 
-        android:hint="@string/input_numbers"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/tv_title"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/tv_title"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title"
-        android:inputType="number"
         android:backgroundTint="@color/light_gray"
-         />
+        android:hint="@string/input_numbers"
+        android:inputType="number"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="@+id/title"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/title"
+        app:layout_constraintTop_toBottomOf="@+id/title" />
 
     <Button
         android:id="@+id/button_checking_input"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        app:layout_constraintEnd_toEndOf="@+id/tv_title"
-        app:layout_constraintStart_toStartOf="@+id/tv_title"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title"
-        android:layout_marginTop="110dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="110dp"
         android:layout_marginEnd="20dp"
         android:text="@string/input"
         android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="@+id/title"
+        app:layout_constraintStart_toStartOf="@+id/title"
+        app:layout_constraintTop_toBottomOf="@+id/title"
 
 
         />
+
     <Button
         android:id="@+id/button_restart_game"
         android:layout_width="100dp"
         android:layout_height="50dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_title"
-        app:layout_constraintStart_toStartOf="@+id/tv_title"
-        app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintEnd_toEndOf="@+id/tv_title"
-        android:layout_marginTop="50dp"
         android:layout_marginStart="60dp"
+        android:layout_marginTop="50dp"
         android:text="@string/yes"
-        android:textSize="22sp"
         android:textColor="@color/white"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="@+id/title"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintStart_toStartOf="@+id/title"
+        app:layout_constraintTop_toBottomOf="@+id/title"
 
 
         />
-<Button
-    android:id="@+id/button_end_game"
-    android:layout_width="100dp"
-    android:layout_height="50dp"
-    app:layout_constraintTop_toBottomOf="@id/tv_title"
-    app:layout_constraintEnd_toEndOf="@+id/tv_title"
-    app:layout_constraintStart_toStartOf="@+id/tv_title"
-    android:layout_marginTop="50dp"
-    android:layout_marginEnd="60dp"
-    app:layout_constraintHorizontal_bias="1"
-    android:text="@string/no"
-    android:textSize="22sp"
-    android:textColor="@color/white"
 
-    />
+    <Button
+        android:id="@+id/button_end_game"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="60dp"
+        android:text="@string/no"
+        android:textColor="@color/white"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="@+id/title"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintStart_toStartOf="@+id/title"
+        app:layout_constraintTop_toBottomOf="@id/title"
+
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
